[gd_scene load_steps=63 format=3 uid="uid://rdrfy4i51cl8"]

[ext_resource type="Script" path="res://src/input/PlayerInput.gd" id="1_k4f7f"]
[ext_resource type="Texture2D" uid="uid://dm01pesa8q3we" path="res://assets/Baelz.png" id="1_pkb8e"]
[ext_resource type="Script" path="res://src/bae.gd" id="1_uu8pv"]
[ext_resource type="Script" path="res://src/skills/AmeTeleport.gd" id="2_dyrvv"]
[ext_resource type="Script" path="res://src/old-system/rpg/rate_limiter.gd" id="3_hvheh"]
[ext_resource type="Script" path="res://src/old-system/rpg/Hurtbox.gd" id="4_ath4u"]
[ext_resource type="Texture2D" uid="uid://deedm06plu7s6" path="res://assets/Icon_Ame.png" id="4_ib5uc"]
[ext_resource type="Shader" path="res://src/simple_circle.gdshader" id="4_lfcma"]
[ext_resource type="Shader" path="res://src/old-system/shaders/hit.gdshader" id="4_p3cl5"]
[ext_resource type="AudioStream" uid="uid://k65kqc85my2c" path="res://assets/sound/tp.wav" id="5_e8kua"]
[ext_resource type="Script" path="res://src/skills/SimpleHitAttack.gd" id="6_5my0o"]
[ext_resource type="Script" path="res://src/old-system/rpg/health.gd" id="7_0gixn"]
[ext_resource type="Theme" uid="uid://b7kuxx763de25" path="res://theme/theme.tres" id="7_01g6y"]
[ext_resource type="Shader" path="res://src/circle.gdshader" id="7_85w35"]
[ext_resource type="Script" path="res://src/HpBar.gd" id="7_abq4l"]
[ext_resource type="Texture2D" uid="uid://bwve2nq30wldn" path="res://icon.svg" id="7_fdl4x"]
[ext_resource type="PackedScene" uid="uid://cqimjkhl2w5rr" path="res://src/skills/hitbox_attack.tscn" id="8_7wopi"]
[ext_resource type="Resource" uid="uid://7bsncgkxat66" path="res://src/skills/resource/KiaraAttack.tres" id="8_87hd8"]
[ext_resource type="Texture2D" uid="uid://cr5lgys0l5syn" path="res://assets/tilemap_packed.png" id="8_e4cu6"]
[ext_resource type="Script" path="res://src/old-system/FrameFreeze.gd" id="8_s1lnb"]
[ext_resource type="Script" path="res://src/ShaderHitFlash.gd" id="9_bqdnm"]
[ext_resource type="Script" path="res://src/CircleTimer.gd" id="9_c31dr"]
[ext_resource type="Texture2D" uid="uid://b7fsp77cpvup8" path="res://assets/Cursor.png" id="9_owcvy"]
[ext_resource type="Texture2D" uid="uid://ufeoj0yljqyi" path="res://assets/Icon_Kiara.png" id="9_qoi0x"]
[ext_resource type="Resource" uid="uid://dh40s7ltwnlif" path="res://src/skills/resource/CalliScythe.tres" id="10_6b7ml"]
[ext_resource type="AudioStream" uid="uid://dxpyrplfh1kd3" path="res://assets/sound/剣の素振り3.mp3" id="10_7iu87"]
[ext_resource type="Script" path="res://src/skills/GuraDive.gd" id="10_vg1ia"]
[ext_resource type="Texture2D" uid="uid://wefkuh407ntl" path="res://assets/Icon_Gura.png" id="11_h7gbh"]
[ext_resource type="Texture2D" uid="uid://dvmkbjmibmhyf" path="res://assets/Icon_Calli.jpg" id="11_v71m3"]
[ext_resource type="Script" path="res://src/Gameover.gd" id="12_fcj8v"]
[ext_resource type="PackedScene" uid="uid://c77wbnvg056ri" path="res://src/skills/gura_dive.tscn" id="13_e854t"]
[ext_resource type="AudioStream" uid="uid://c8464fj52sokv" path="res://assets/sound/剣の素振り1.mp3" id="13_xpmo7"]
[ext_resource type="Resource" uid="uid://c5fnofv65s5u6" path="res://src/skills/resource/GuraDive.tres" id="14_x42jw"]
[ext_resource type="Resource" uid="uid://lyxod4y62k4h" path="res://src/skills/resource/InaTentacles.tres" id="15_ij3a3"]
[ext_resource type="Texture2D" uid="uid://bkivylqrr6n53" path="res://assets/Icon_Ina.png" id="15_lff3y"]
[ext_resource type="Script" path="res://src/skills/ChaosRoll.gd" id="15_xxjbs"]
[ext_resource type="PackedScene" uid="uid://ll72mt1gbjn4" path="res://src/skills/dice.tscn" id="16_3mfjx"]
[ext_resource type="AudioStream" uid="uid://dx5fohj8216kp" path="res://assets/sound/プールでダイビング.mp3" id="19_0dcya"]
[ext_resource type="Script" path="res://src/ProgressiveHeal.gd" id="21_x3a1i"]
[ext_resource type="AudioStream" uid="uid://bq07r4a68he3x" path="res://assets/sound/嵐の海.mp3" id="22_j8rv7"]
[ext_resource type="Texture2D" uid="uid://ehoyca7petcb" path="res://assets/Cube.png" id="32_1815s"]
[ext_resource type="Texture2D" uid="uid://c0q3lmgi77qi6" path="res://assets/Buff_Health.png" id="32_fhqed"]
[ext_resource type="Texture2D" uid="uid://bjgaiqxv2f0b5" path="res://assets/BuffUp.png" id="33_2k7fe"]
[ext_resource type="Texture2D" uid="uid://cie5ksr2sya0f" path="res://assets/Buff_Enemy.png" id="34_8nrvw"]
[ext_resource type="Texture2D" uid="uid://bll6855bdy356" path="res://assets/Buff_Attack.png" id="36_ninyg"]
[ext_resource type="Script" path="res://src/EnemyBuff.gd" id="36_vfoui"]
[ext_resource type="AudioStream" uid="uid://efbxwqkcmoib" path="res://assets/sound/dice_ready.wav" id="42_ot3mv"]
[ext_resource type="AudioStream" uid="uid://2bhkgigj0rs4" path="res://assets/sound/hit.wav" id="43_cjl6i"]
[ext_resource type="AudioStream" uid="uid://dijaa0s8kvokb" path="res://assets/sound/lose.wav" id="44_6qq5c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r28m1"]
shader = ExtResource("4_lfcma")
shader_parameter/radius = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vmewj"]
size = Vector2(12, 16)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_12nwv"]
bg_color = Color(0.541176, 0.117647, 0.117647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3qbgh"]
bg_color = Color(0.219608, 0.788235, 0.117647, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ctc5y"]
shader = ExtResource("4_p3cl5")
shader_parameter/enable = false
shader_parameter/hit_color = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_280xg"]
size = Vector2(14, 4)

[sub_resource type="Animation" id="Animation_yov1s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Gameover:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ddhmo"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_hnuck"]
resource_name = "move"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y87iq"]
_data = {
"RESET": SubResource("Animation_yov1s"),
"idle": SubResource("Animation_ddhmo"),
"move": SubResource("Animation_hnuck")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ctury"]
bg_color = Color(0.239216, 0.105882, 0.105882, 1)
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3y46c"]
bg_color = Color(0.729412, 0.254902, 0.254902, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a3145"]
shader = ExtResource("7_85w35")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/outer_radius = 0.748
shader_parameter/inner_radius = 0.372
shader_parameter/turn = 0.0
shader_parameter/blur = 0.0
shader_parameter/fill_ratio = 1.0

[node name="Bae" type="CharacterBody2D" node_paths=PackedStringArray("gameover", "chaos_meter_bar", "special_skill_slot", "attack_skill_slot", "defense_skill_slot") groups=["player"]]
script = ExtResource("1_uu8pv")
gameover = NodePath("CanvasLayer/Gameover")
chaos_meter_bar = NodePath("CanvasLayer/Control2/HBoxContainer/VBoxContainer/ProgressBar")
special_skill_slot = NodePath("CanvasLayer/Control2/HBoxContainer/Special")
attack_skill_slot = NodePath("CanvasLayer/Control2/MarginContainer/VBoxContainer/HBoxContainer/Attack")
defense_skill_slot = NodePath("CanvasLayer/Control2/MarginContainer/VBoxContainer/HBoxContainer/Defense")

[node name="DefenseTimer" type="Timer" parent="."]
script = ExtResource("3_hvheh")

[node name="AttackSound" type="AudioStreamPlayer" parent="DefenseTimer"]
volume_db = -10.0

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
script = ExtResource("3_hvheh")

[node name="AttackSound" type="AudioStreamPlayer" parent="AttackTimer"]
volume_db = -10.0

[node name="SpecialTimer" type="Timer" parent="."]
script = ExtResource("3_hvheh")

[node name="Skills" type="Node" parent="."]

[node name="AmeTeleport" type="Node" parent="Skills" node_paths=PackedStringArray("rect")]
script = ExtResource("2_dyrvv")
rect = NodePath("ColorRect")
icon = ExtResource("4_ib5uc")
cooldown = 2.0
sound = ExtResource("5_e8kua")

[node name="ColorRect" type="ColorRect" parent="Skills/AmeTeleport"]
material = SubResource("ShaderMaterial_r28m1")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.380392, 0.588235, 1, 0.403922)

[node name="KiaraAttack" type="Node" parent="Skills"]
script = ExtResource("6_5my0o")
attack_scene = ExtResource("8_7wopi")
hitbox_resource = ExtResource("8_87hd8")
icon = ExtResource("9_qoi0x")
cooldown = 0.2
sound = ExtResource("10_7iu87")

[node name="CalliScythe" type="Node" parent="Skills"]
script = ExtResource("6_5my0o")
attack_scene = ExtResource("8_7wopi")
hitbox_resource = ExtResource("10_6b7ml")
icon = ExtResource("11_v71m3")
sound = ExtResource("13_xpmo7")

[node name="GuraDive" type="Node" parent="Skills"]
script = ExtResource("10_vg1ia")
attack_scene = ExtResource("13_e854t")
hitbox_resource = ExtResource("14_x42jw")
icon = ExtResource("11_h7gbh")
cooldown = 2.0
sound = ExtResource("19_0dcya")

[node name="InaTentacles" type="Node" parent="Skills"]
script = ExtResource("6_5my0o")
attack_scene = ExtResource("8_7wopi")
hitbox_resource = ExtResource("15_ij3a3")
to_hand = false
icon = ExtResource("15_lff3y")
cooldown = 3.0
sound = ExtResource("22_j8rv7")

[node name="ChaosRoll" type="Node" parent="Skills"]
script = ExtResource("15_xxjbs")
dice_scene = ExtResource("16_3mfjx")
icon = ExtResource("32_1815s")
cooldown = 20.0

[node name="ProgressiveHeal" type="Node" parent="." node_paths=PackedStringArray("player", "health")]
script = ExtResource("21_x3a1i")
player = NodePath("..")
health = NodePath("../HurtBox/Health")

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health", "hit_sound", "frame_freeze", "hit_flash", "collision")]
collision_layer = 8
collision_mask = 0
script = ExtResource("4_ath4u")
health = NodePath("Health")
hit_sound = NodePath("HitSound")
frame_freeze = NodePath("FrameFreeze")
hit_flash = NodePath("ShaderHitFlash")
invincible_time = 0.5
collision = NodePath("CollisionShape2D")

[node name="HitSound" type="AudioStreamPlayer" parent="HurtBox"]
stream = ExtResource("43_cjl6i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_vmewj")

[node name="Health" type="Node" parent="HurtBox"]
script = ExtResource("7_0gixn")
max_health = 200.0

[node name="FrameFreeze" type="Node" parent="HurtBox"]
script = ExtResource("8_s1lnb")

[node name="ShaderHitFlash" type="Node" parent="HurtBox" node_paths=PackedStringArray("node")]
script = ExtResource("9_bqdnm")
node = NodePath("../../Body")

[node name="HandRoot" type="Node2D" parent="."]
position = Vector2(0, -7)

[node name="Sprite2D" type="Sprite2D" parent="HandRoot"]
position = Vector2(16, 0)
texture = ExtResource("9_owcvy")

[node name="HpBar" type="ProgressBar" parent="." node_paths=PackedStringArray("health")]
custom_minimum_size = Vector2(15, 2)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -7.0
offset_top = -24.0
offset_right = 8.0
offset_bottom = -22.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_12nwv")
theme_override_styles/fill = SubResource("StyleBoxFlat_3qbgh")
step = 0.001
show_percentage = false
script = ExtResource("7_abq4l")
health = NodePath("../HurtBox/Health")

[node name="Body" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ctc5y")
position = Vector2(0, -9)
texture = ExtResource("1_pkb8e")
hframes = 8

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource("1_k4f7f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_280xg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y87iq")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control2" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("7_01g6y")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control2"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 3.0
grow_horizontal = 2
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 10)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/background = SubResource("StyleBoxFlat_ctury")
theme_override_styles/fill = SubResource("StyleBoxFlat_3y46c")
step = 0.001
value = 50.0
show_percentage = false

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
alignment = 2

[node name="AttackBuff" type="TextureRect" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer" node_paths=PackedStringArray("player", "level_1_icon", "level_2_icon")]
layout_mode = 2
texture = ExtResource("36_ninyg")
expand_mode = 2
stretch_mode = 5
script = ExtResource("36_vfoui")
player = NodePath("../../../../../../..")
property = "chaos_meter"
max_property = "max_chaos_meter"
level_0_limit = 0.05
level_0_text = "increase attack speed"
level_1_icon = NodePath("MarginContainer2/VBoxContainer/TextureRect")
level_1_limit = 0.5
level_1_text = "greatly increase attack speed"
level_2_icon = NodePath("MarginContainer2/VBoxContainer/TextureRect2")
level_2_limit = 0.8
level_2_text = "immensely increase attack speed"

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/AttackBuff"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -13.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = -3
theme_override_constants/margin_bottom = -3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/AttackBuff/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = -3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/AttackBuff/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
texture = ExtResource("33_2k7fe")
expand_mode = 2
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/AttackBuff/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
texture = ExtResource("33_2k7fe")
expand_mode = 2
stretch_mode = 5

[node name="HealthBuff" type="TextureRect" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer" node_paths=PackedStringArray("player", "level_1_icon", "level_2_icon")]
layout_mode = 2
texture = ExtResource("32_fhqed")
expand_mode = 2
stretch_mode = 5
script = ExtResource("36_vfoui")
player = NodePath("../../../../../../..")
property = "chaos_meter"
max_property = "max_chaos_meter"
level_0_limit = 0.05
level_0_text = "slowly regenerate health"
level_1_icon = NodePath("MarginContainer/VBoxContainer/TextureRect")
level_1_limit = 0.5
level_1_text = "regenerate health"
level_2_icon = NodePath("MarginContainer/VBoxContainer/TextureRect2")
level_2_limit = 0.8
level_2_text = "regenerate health fast"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/HealthBuff"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -13.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = -3
theme_override_constants/margin_bottom = -3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/HealthBuff/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/HealthBuff/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
texture = ExtResource("33_2k7fe")
expand_mode = 2
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/HealthBuff/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
texture = ExtResource("33_2k7fe")
expand_mode = 2
stretch_mode = 5

[node name="EnemyBuff" type="TextureRect" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer" node_paths=PackedStringArray("player", "level_1_icon", "level_2_icon")]
layout_mode = 2
texture = ExtResource("34_8nrvw")
expand_mode = 2
stretch_mode = 5
script = ExtResource("36_vfoui")
player = NodePath("../../../../../../..")
property = "enemy_count"
level_0_text = "decrease chaos meter reduction"
level_1_icon = NodePath("MarginContainer2/VBoxContainer/TextureRect")
level_1_limit = 20.0
level_1_text = "greatly decrease chaos meter reduction"
level_2_icon = NodePath("MarginContainer2/VBoxContainer/TextureRect2")
level_2_limit = 50.0
level_2_text = "immensely decrease chaos meter reduction"

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/EnemyBuff"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -13.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = -3
theme_override_constants/margin_bottom = -3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/EnemyBuff/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = -3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/EnemyBuff/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
texture = ExtResource("33_2k7fe")
expand_mode = 2
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Control2/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/EnemyBuff/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
texture = ExtResource("33_2k7fe")
expand_mode = 2
stretch_mode = 5

[node name="Special" type="TextureRect" parent="CanvasLayer/Control2/HBoxContainer"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
texture = ExtResource("32_1815s")
expand_mode = 2
stretch_mode = 5

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/Control2/HBoxContainer/Special" node_paths=PackedStringArray("timer")]
material = SubResource("ShaderMaterial_a3145")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_c31dr")
timer = NodePath("../../../../../SpecialTimer")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control2/HBoxContainer/Special"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control2/HBoxContainer/Special/MarginContainer"]
texture = ExtResource("8_e4cu6")
offset = Vector2(4, -4)
hframes = 34
vframes = 24
frame = 87

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -25.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control2/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Attack" type="TextureRect" parent="CanvasLayer/Control2/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("7_fdl4x")
expand_mode = 2
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control2/MarginContainer/VBoxContainer/HBoxContainer/Attack" node_paths=PackedStringArray("timer")]
material = SubResource("ShaderMaterial_a3145")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_c31dr")
timer = NodePath("../../../../../../../AttackTimer")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control2/MarginContainer/VBoxContainer/HBoxContainer/Attack"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control2/MarginContainer/VBoxContainer/HBoxContainer/Attack/MarginContainer"]
texture = ExtResource("8_e4cu6")
offset = Vector2(-3, 3)
hframes = 34
vframes = 24
frame = 77

[node name="Defense" type="TextureRect" parent="CanvasLayer/Control2/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
texture = ExtResource("7_fdl4x")
expand_mode = 2
stretch_mode = 5

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Control2/MarginContainer/VBoxContainer/HBoxContainer/Defense" node_paths=PackedStringArray("timer")]
material = SubResource("ShaderMaterial_a3145")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_c31dr")
timer = NodePath("../../../../../../../DefenseTimer")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control2/MarginContainer/VBoxContainer/HBoxContainer/Defense"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control2/MarginContainer/VBoxContainer/HBoxContainer/Defense/MarginContainer"]
texture = ExtResource("8_e4cu6")
offset = Vector2(-3, 3)
hframes = 34
vframes = 24
frame = 78

[node name="Gameover" type="ColorRect" parent="CanvasLayer" node_paths=PackedStringArray("restart")]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_01g6y")
color = Color(0, 0, 0, 0.560784)
script = ExtResource("12_fcj8v")
restart = NodePath("CenterContainer/VBoxContainer/Restart")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Gameover"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Gameover/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CanvasLayer/Gameover/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Gameover"
horizontal_alignment = 1

[node name="Restart" type="Button" parent="CanvasLayer/Gameover/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Try again"

[node name="DiceReady" type="AudioStreamPlayer" parent="."]
stream = ExtResource("42_ot3mv")

[node name="LoseSound" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("44_6qq5c")

[connection signal="zero_health" from="HurtBox/Health" to="." method="_on_health_zero_health"]
